<resources>
    <string name="app_name">layput_uiwiget</string>

    <string name="Button">Button</string>
    <string name="Button1">Button 1</string>
    <string name="Button2">Button 2</string>
    <string name="Button3">Button 3</string>
    <string name="Button4">Button 4</string>
    <string name="Button5">Button 5</string>
    <string name="Button6">Button 6</string>
    <string name="Button7">Button 7</string>
    <string name="Button8">Button 8</string>
    <string name="Button9">Button 9</string>

    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>

    <string name="hint_email_phone">Email and Phone</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">Log In</string>
    <string name="text_sign_up">Sign up for facebook</string>
    <string name="text_forget_passwd">Forgot Password?</string>
    <string name="num_a">Số a:</string>
    <string name="num_b">Số b:</string>
    <string name="num_c">Tổng a+b:</string>
</resources>
