
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:background="@color/blue"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imv_fb"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:background="@drawable/image_facebook"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_email"
        android:layout_below="@+id/imv_fb"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        android:text="@string/hint_email_phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_pass"
        android:layout_below="@+id/edt_email"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        android:text="@string/hint_pass"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_below="@+id/edt_pass"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:padding="@dimen/text_padding"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btn_forget_passwd"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_login"
        android:gravity="center"
        android:text="@string/text_forget_passwd"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/text_padding"
        android:text="@string/text_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"/>

    <ImageView
        android:id="@+id/question_mark"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/imv_fb"
        android:layout_alignTop="@+id/btn_sign_up"
        android:background="@drawable/question_mark"
        android:padding="@dimen/text_padding" />
</RelativeLayout>